--- a/services/environment.html
+++ b/services/environment.html
@@ -222,7 +222,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
    <h2 class="mrgn-tp-0">Most requested</h2> 
    <ul class="lst-spcd"> 
     <!--<li><a href="/en/environment-climate-change/canadian-environment-week">Canadian Environment Week</a></li>--> 
-    <li><a href="http://weather.gc.ca/">Current and forecast weather for my community</a></li> 
+    <li><a href="/weather/index_e.html">Current and forecast weather for my community</a></li> 
     <li><a href="http://weather.gc.ca/radar/index_e.html">Radar for my region</a></li> 
     <li><a href="http://www.ec.gc.ca/ee-ue/default.asp?lang=En&amp;n=EED2E58C-1">Report an environmental emergency</a></li> 
     <li><a href="http://www.dfo-mpo.gc.ca/fm-gp/sdc-cps/licence-permis-eng.htm">Get your commercial fishing licence online</a></li> 
