--- a/index_e.html
+++ b/index_e.html
@@ -243,7 +243,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 	</div>
 <div class="wb-eqht row">
 		<section class="col-lg-4 col-md-6" style="vertical-align: top;">
-			<h3><a href="/mainmenu/weather_menu_e.html">Weather</a></h3>
+			<h3><a href="/weather/mainmenu/weather_menu_e.html">Weather</a></h3>
 			<p>Get the latest weather, 24hr detailed forecast and seven day forecast for locations across Canada. Plus, view local radar and satellite imagery.</p>
 			<details id="gps-jq">
 			<summary>Use Current Location</summary>
@@ -251,22 +251,22 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 			</details>
 		</section>
 		<section class="col-lg-4 col-md-6" style="vertical-align: top;">
-			<h3><a href="/mainmenu/alert_menu_e.html">Alerts</a></h3>
+			<h3><a href="/weather/mainmenu/alert_menu_e.html">Alerts</a></h3>
 			<p>Get current weather alerts across Canada from the Authoritative Source of Weather Alerts 24/7; Environment Canada. Read about the latest events in our weather summaries. Know the risk of lightning strikes with our lightning danger maps. Track hurricanes in motion.</p>
 		</section>
 		<div class="clearfix visible-md"></div>	
 		<section class="col-lg-4 col-md-6" style="vertical-align: top;">
-			<h3><a href="/mainmenu/marine_menu_e.html">Marine</a></h3>
+			<h3><a href="/weather/mainmenu/marine_menu_e.html">Marine</a></h3>
 			<p>Connect with the latest marine alerts coming from the Authoritative Source of Weather Alerts 24/7; Environment Canada. Also get marine forecasts, sea ice conditions, wave modelling information and sea surface temperatures.</p>
 		</section>
 		<div class="clearfix visible-lg"></div>
 		<section class="col-lg-4 col-md-6" style="vertical-align: top;">
-			<h3><a href="/mainmenu/airquality_menu_e.html">Air Quality</a></h3>
+			<h3><a href="/weather/mainmenu/airquality_menu_e.html">Air Quality</a></h3>
 			<p>Find the latest local air quality forecasts and information.</p>
 		</section>
 		<div class="clearfix visible-md"></div>	
 		<section class="col-lg-4 col-md-6" style="vertical-align: top;">
-			<h3><a href="/mainmenu/modelling_menu_e.html">Analyses and Modelling</a></h3>
+			<h3><a href="/weather/mainmenu/modelling_menu_e.html">Analyses and Modelling</a></h3>
 			<p>Access modelling and analyses information on seasonal forecasting, snow depth, wave modelling, sea ice cover, stratospheric ozone, upper air analyses, cloud forecasting, aviation conditions, and geospatial services.</p>
 		</section>
 		<section class="col-lg-4 col-md-6" style="vertical-align: top;">
