--- a/mainmenu/weather_menu_e.html
+++ b/mainmenu/weather_menu_e.html
@@ -11,25 +11,25 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <meta name="description" content="Web Experience Toolkit (WET) includes reusable components for building and maintaining innovative Web sites that are accessible, usable, and interoperable. These reusable components are open source software and free for use by departments and external Web communities">
 <!-- Meta data-->
 <!--[if gte IE 9 | !IE ]><!-->
-<link rel="stylesheet" href="../../cacheable/css/mainmenu/index-e.css" media="screen">
-<link href="../../GCWeb/assets/favicon.ico" rel="icon" type="image/x-icon">
-<link rel="stylesheet" href="../../GCWeb/css/theme.min.css">
+<link rel="stylesheet" href="../cacheable/css/mainmenu/index-e.css" media="screen">
+<link href="../GCWeb/assets/favicon.ico" rel="icon" type="image/x-icon">
+<link rel="stylesheet" href="../GCWeb/css/theme.min.css">
 <!--<![endif]-->
 <!--[if lt IE 9]>
-<link href="../../GCWeb/assets/favicon.ico" rel="shortcut icon" />
+<link href="../GCWeb/assets/favicon.ico" rel="shortcut icon" />
 <link rel="stylesheet" href="/cacheable/css/mainmenu/index-ie8-e.css" media="screen">
-<link rel="stylesheet" href="../../GCWeb/css/ie8-theme.min.css" />
+<link rel="stylesheet" href="../GCWeb/css/ie8-theme.min.css" />
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<script src="../../wet-boew/js/ie8-wet-boew.min.js"></script>
+<script src="../wet-boew/js/ie8-wet-boew.min.js"></script>
 <![endif]-->
 <!--[if lte IE 9]>
 <![endif]-->
-<noscript><link rel="stylesheet" href="../../wet-boew/css/noscript.min.css" /></noscript>
+<noscript><link rel="stylesheet" href="../wet-boew/css/noscript.min.css" /></noscript>
 <!-- Google Tag Manager DO NOT REMOVE OR MODIFY - NE PAS SUPPRIMER OU MODIFIER -->
 <script>dataLayer1 = [];</script>
 <!-- End Google Tag Manager -->
-<link rel="stylesheet" href="../../cacheable/css/city/jquery-ui-1.10.3.custom.min.css" />
-<link rel="stylesheet" href="../../template/wxo/css/wxo.css" />
+<link rel="stylesheet" href="../cacheable/css/city/jquery-ui-1.10.3.custom.min.css" />
+<link rel="stylesheet" href="../template/wxo/css/wxo.css" />
 
 </head>
 <body vocab="http://schema.org/" typeof="WebPage">
@@ -59,7 +59,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 </section>
 <div class="row">
 <div class="brand col-xs-8 col-sm-9 col-md-6">
-<a href="https://www.canada.ca/en.html"><object type="image/svg+xml" tabindex="-1" data="../../GCWeb/assets/sig-blk-en.svg"></object><span class="wb-inv"> Government of Canada</span></a>
+<a href="https://www.canada.ca/en.html"><object type="image/svg+xml" tabindex="-1" data="../GCWeb/assets/sig-blk-en.svg"></object><span class="wb-inv"> Government of Canada</span></a>
 </div>
 <section class="wb-mb-links col-xs-4 col-sm-3 visible-sm visible-xs" id="wb-glb-mn">
 <h2>Search and menus</h2>
@@ -86,7 +86,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 </section>
 </div>
 </div>
-<nav role="navigation" id="wb-sm" data-ajax-replace="../../ajax/sitemenu-en.html" data-trgt="mb-pnl" class="wb-menu visible-md visible-lg" typeof="SiteNavigationElement">
+<nav role="navigation" id="wb-sm" data-ajax-replace="../ajax/sitemenu-en.html" data-trgt="mb-pnl" class="wb-menu visible-md visible-lg" typeof="SiteNavigationElement">
 <div class="container nvbar">
 <h2>Topics menu</h2>
 <div class="row">
@@ -355,7 +355,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <a href="#wb-cont">Top of Page <span class="glyphicon glyphicon-chevron-up"></span></a>
 </div>
 <div class="col-xs-6 col-md-2 text-right">
-<object type="image/svg+xml" tabindex="-1" role="img" data="../../GCWeb/assets/wmms-blk.svg" aria-label="Symbol of the Government of Canada"></object>
+<object type="image/svg+xml" tabindex="-1" role="img" data="../GCWeb/assets/wmms-blk.svg" aria-label="Symbol of the Government of Canada"></object>
 </div>
 </div>
 </div>
@@ -363,26 +363,26 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 </footer>
 <!--[if gte IE 9 | !IE ]><!-->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
-<script src="../../wet-boew/js/wet-boew.min.js"></script>
+<script src="../wet-boew/js/wet-boew.min.js"></script>
 <!--<![endif]-->
 <!--[if lt IE 9]>
-<script src="../../wet-boew/js/ie8-wet-boew2.min.js"></script>
+<script src="../wet-boew/js/ie8-wet-boew2.min.js"></script>
 <![endif]-->
-<script src="../../GCWeb/js/theme.min.js"></script>
+<script src="../GCWeb/js/theme.min.js"></script>
 
 <!--[if gte IE 9 | !IE ]><!-->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
-<script src="../../template/gcweb/v4.0.22/js/wet-boew.min.js"></script>
+<script src="../template/gcweb/v4.0.22/js/wet-boew.min.js"></script>
 <!--<![endif]-->
 <!--[if lt IE 9]>
 <script src="/template/gcweb/v4.0.22/js/ie8-wet-boew2.min.js"></script>
 <![endif]-->
-<script src="../../template/gcweb/v4.0.22/js/theme.min.js"></script>
+<script src="../template/gcweb/v4.0.22/js/theme.min.js"></script>
 
 
-<script src="../../cacheable/js/city/jquery-ui-1.10.3.custom.min.js"></script>
-<script src="../../cacheable/js/city/availableTags_e.min.js"></script>
-<script src="../../city/js/cityjump.js"></script>
+<script src="../cacheable/js/city/jquery-ui-1.10.3.custom.min.js"></script>
+<script src="../cacheable/js/city/availableTags_e.min.js"></script>
+<script src="../city/js/cityjump.js"></script>
 <script>
     document.getElementById("jump").className = "";
     var max_chars = 50;
@@ -397,10 +397,10 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         }
     });
 </script>
-<script src="../../template/gcweb/v4.0.22/js/deps/jquery.dataTables.min.js"></script>
-<script src="../../city/js/jquery.h5validate.js"></script>
-<script src="../../cacheable/js/myprofile/alerts-1.0.min.js"></script>
-<script src="../../cacheable/js/myprofile/refresher-1.0.min.js"></script>
+<script src="../template/gcweb/v4.0.22/js/deps/jquery.dataTables.min.js"></script>
+<script src="../city/js/jquery.h5validate.js"></script>
+<script src="../cacheable/js/myprofile/alerts-1.0.min.js"></script>
+<script src="../cacheable/js/myprofile/refresher-1.0.min.js"></script>
 <script>
     $(document).ready(function () {
         $('form').h5Validate({
@@ -408,10 +408,10 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         });
     });
 </script>
-<script>LANG = "en-CA";</script><script src="../../gps/js/translate.js"></script>
-<script src="../../gps/js/gps.js"></script>
-<script src="../../gps/js/langStrings.js"></script>
-<script src="../../gps/js/cityLatLon.js"></script>
+<script>LANG = "en-CA";</script><script src="../gps/js/translate.js"></script>
+<script src="../gps/js/gps.js"></script>
+<script src="../gps/js/langStrings.js"></script>
+<script src="../gps/js/cityLatLon.js"></script>
 
 <script>
 $(document).ready(function(){
