some missing files added

--- a/index_e.html
+++ b/index_e.html
@@ -406,13 +406,13 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 
 <!--[if gte IE 9 | !IE ]><!-->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
-<script src="./template/gcweb/v4.0.22/js/wet-boew.min.js"></script>
+<script src="./template/gcweb/js/wet-boew.min.js"></script>
 <!--<![endif]-->
 <!--[if lt IE 9]>
-<script src="/template/gcweb/v4.0.22/js/ie8-wet-boew2.min.js"></script>
+<script src="/template/gcweb/js/ie8-wet-boew2.min.js"></script>
 
 <![endif]-->
-<script src="./template/gcweb/v4.0.22/js/theme.min.js"></script>
+<script src="./GCWeb/css/theme.min.css"></script>
 
 
 <script src="./cacheable/js/city/jquery-ui-1.10.3.custom.min.js"></script>
