--- a/mainmenu/weather_menu_e.html
+++ b/mainmenu/weather_menu_e.html
@@ -160,7 +160,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 				</div>
 			</details>
 			<ul class="unol">
-				<li><a href="/canada_e.html">Canada</a></li>
+				<li><a href="/weather/canada_e.html">Canada</a></li>
 				<li><a href="/forecast/canada/index_e.html?id=AB">Alberta</a></li>
 				<li><a href="/forecast/canada/index_e.html?id=BC">British Columbia</a></li>
 				<li><a href="/forecast/canada/index_e.html?id=MB">Manitoba</a></li>
@@ -169,7 +169,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 				<li><a href="/forecast/canada/index_e.html?id=NT">Northwest Territories</a></li>
 				<li><a href="/forecast/canada/index_e.html?id=NS">Nova Scotia</a></li>
 				<li><a href="/forecast/canada/index_e.html?id=NU">Nunavut</a></li>
-				<li><a href="/forecast/canada/index_e.html?id=ON">Ontario</a></li>
+				<li><a href="/weather/forecast/canada/index_e.html?id=ON">Ontario</a></li>
 				<li><a href="/forecast/canada/index_e.html?id=PE">Prince Edward Island</a></li>
 				<li><a href="/forecast/canada/index_e.html?id=QC">Quebec</a></li>
 				<li><a href="/forecast/canada/index_e.html?id=SK">Saskatchewan</a></li>
