--- a/index_e.html
+++ b/index_e.html
@@ -434,7 +434,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         }
     });
 </script>
-<script src="./template/gcweb/v4.0.22/js/deps/jquery.dataTables.min.js"></script>
+<script src="./template/gcweb/js/deps/jquery.dataTables.min.js"></script>
 <script src="./city/js/jquery.h5validate.js"></script>
 <script src="./cacheable/js/myprofile/alerts-1.0.min.js"></script>
 <script src="./cacheable/js/myprofile/refresher-1.0.min.js"></script>
