--- a/canada_e.html
+++ b/canada_e.html
@@ -20,7 +20,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <link rel="stylesheet" href="/cacheable/css/mainmenu/index-ie8-e.css" media="screen">
 <link rel="stylesheet" href="./GCWeb/css/ie8-theme.min.css" />
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<script src="/wet-boew/js/ie8-wet-boew.min.js"></script>
+<script src="./wet-boew/js/ie8-wet-boew.min.js"></script>
 <![endif]-->
 <!--[if lte IE 9]>
 <![endif]-->
