--- a/canada_e.html
+++ b/canada_e.html
@@ -233,7 +233,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <li><a title="Nova Scotia" href="/forecast/canada/index_e.html?id=NS"><span class="wb-inv">Nova Scotia</span>NS</a></li>
 <li><a title="Northwest Territories" href="/forecast/canada/index_e.html?id=NT"><span class="wb-inv">Northwest Territories</span>NT</a></li>
 <li><a title="Nunavut" href="/forecast/canada/index_e.html?id=NU"><span class="wb-inv">Nunavut</span>NU</a></li>
-<li><a title="Ontario" href="/weather/forecast/canada/index_e.html?id=ON"><span class="wb-inv">Ontario</span>ON</a></li>
+<li><a title="Ontario" href="/weather/forecast/canada/ON_index_e.html"><span class="wb-inv">Ontario</span>ON</a></li>
 <li><a title="Prince Edward Island" href="/forecast/canada/index_e.html?id=PE"><span class="wb-inv">Prince Edward Island</span>PE</a></li>
 <li><a title="Quebec" href="/forecast/canada/index_e.html?id=QC"><span class="wb-inv">Quebec</span>QC</a></li>
 <li><a title="Saskatchewan" href="/forecast/canada/index_e.html?id=SK"><span class="wb-inv">Saskatchewan</span>SK</a></li>
