--- a/forecast/canada/ON_index_e.html
+++ b/forecast/canada/ON_index_e.html
@@ -184,13 +184,13 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 		      <div class="well">
 <h2 class="mrgn-tp-0">Weather Links</h2>
 	<ul class="lst-spcd">
-		<li><a href="/canada_e.html">Canadian Weather</a></li>
-		<li><a href="/warnings/index_e.html">Public Alerts - Canada</a></li>
-		<li><a href="/radar/index_e.html">Radar - Canada</a></li>
-		<li><a href="/satellite/index_e.html">Satellite - Canada</a></li>
-		<li><a href="/saisons/index_e.html">Seasonal forecasts</a></li>
-		<li><a href="/mainmenu/airquality_menu_e.html">Air Quality </a></li>
-		<li><a href="/marine/index_e.html">Marine - Canada</a></li>
+		<li><a href="/weather/canada_e.html">Canadian Weather</a></li>
+		<li><a href="/weather/warnings/index_e.html">Public Alerts - Canada</a></li>
+		<li><a href="/weather/radar/index_e.html">Radar - Canada</a></li>
+		<li><a href="/weather/satellite/index_e.html">Satellite - Canada</a></li>
+		<li><a href="/weather/saisons/index_e.html">Seasonal forecasts</a></li>
+		<li><a href="/weather/mainmenu/airquality_menu_e.html">Air Quality </a></li>
+		<li><a href="/weather/marine/index_e.html">Marine - Canada</a></li>
 		<li><a href="http://ec.gc.ca/rhc-wsc/default.asp?lang=En&amp;n=4EED50F1-1">Water Level and Flow</a></li>
 	</ul>
 </div>
@@ -231,7 +231,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <li><a class="btn btn-default btn-sm btn-block" role="button" href="/forecast/canada/index_e.html?id=NT">Northwest Territories</a></li>
 <li><a class="btn btn-default btn-sm btn-block" role="button" href="/forecast/canada/index_e.html?id=NS">Nova Scotia</a></li>
 <li><a class="btn btn-default btn-sm btn-block" role="button" href="/forecast/canada/index_e.html?id=NU">Nunavut</a></li>
-<li><a class="btn btn-default btn-sm btn-block" role="button" href="/forecast/canada/index_e.html?id=ON">Ontario</a></li>
+<li><a class="btn btn-default btn-sm btn-block" role="button" href="/weather/forecast/canada/ON_index_e.html">Ontario</a></li>
 <li><a class="btn btn-default btn-sm btn-block" role="button" href="/forecast/canada/index_e.html?id=PE">Prince Edward Island</a></li>
 <li><a class="btn btn-default btn-sm btn-block" role="button" href="/forecast/canada/index_e.html?id=QC">Quebec</a></li>
 <li><a class="btn btn-default btn-sm btn-block" role="button" href="/forecast/canada/index_e.html?id=SK">Saskatchewan</a></li>
@@ -694,17 +694,17 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <section class="gc-prtts"><h2>Features</h2><div class="row"><section class="col-lg-4 col-md-6 mrgn-bttm-md">
 <a rel="external" href="/redirect.php?url=http://ec.gc.ca/uv/default.asp?lang=En&amp;n=DCF1C20A-1">
 <h3 class="h5">UV Index and sun protection</h3>
-<img class="img-responsive thumbnail mrgn-bttm-sm" src="cacheable/images/banners/SM_123_03_30-UV-Index-and-Sun-Protection_button360x203.jpg?ver=1499874128" alt="" />
+<img class="img-responsive thumbnail mrgn-bttm-sm" src="/weather/cacheable/images/banners/SM_123_03_30-UV-Index-and-Sun-Protection_button360x203.jpg?ver=1499874128" alt="" />
 </a>
 <p>Be weather wise!</p></section><section class="col-lg-4 col-md-6 mrgn-bttm-md">
 <a rel="external" href="/redirect.php?url=http://www.canada.ca/en/health-canada/services/sun-safety/extreme-heat-heat-waves.html">
 <h3 class="h5">Extreme Heat Protection</h3>
-<img class="img-responsive thumbnail mrgn-bttm-sm" src="cacheable/images/banners/SM_124_03_30-Extreme-Heat-02_button_360x203.jpg?ver=1499874128" alt="" />
+<img class="img-responsive thumbnail mrgn-bttm-sm" src="/weathercacheable/images/banners/SM_124_03_30-Extreme-Heat-02_button_360x203.jpg?ver=1499874128" alt="" />
 </a>
 <p>Be prepared!</p></section><section class="col-lg-4 col-md-6 mrgn-bttm-md">
 <a rel="external" href="/redirect.php?url=http://www.ec.gc.ca/cas-aqhi/">
 <h3 class="h5">Be Air Aware</h3>
-<img class="img-responsive thumbnail mrgn-bttm-sm" src="cacheable/images/banners/SM_120_03_30-Air-Quality_01_360x203.jpg?ver=1499874128" alt="" />
+<img class="img-responsive thumbnail mrgn-bttm-sm" src="/weathercacheable/images/banners/SM_120_03_30-Air-Quality_01_360x203.jpg?ver=1499874128" alt="" />
 </a>
 <p>Air Quality Health Index</p></section></div></section>
 <div class="row pagedetails">
