--- a/radar/xft-index_thunder_e.html
+++ b/radar/xft-index_thunder_e.html
@@ -223,7 +223,7 @@
 					<img id="animation-image" 
 					alt="xRadar image for Franktown." 
 					title="xRadar image for Franktown." 
-					src="../data/radar/detailed/XFT_PRECIP_RAIN_2017_08_22_10_00.GIF" 
+					src="../data/radar/detailed/temp_image/XFT_PRECIP_RAIN_2017_08_22_10_00.GIF" 
 					width="580" 
 					height="480" 
 					class="wxo-radar-img wxo-radar-img-nojs img-responsive"
@@ -235,7 +235,7 @@
 				<img id="animation-image" 
 				alt="Radar image for Franktown." 
 				title="Radar image for Franktown." 
-				src="../data/radar/detailed/XFT_PRECIP_RAIN_2017_08_22_10_00.GIF" 
+				src="../data/radar/detailed/temp_image/XFT_PRECIP_RAIN_2017_08_22_10_00.GIF" 
 				width="580" 
 				height="480" 
 				class="wxo-radar-img hidden-xs wxo-radar-img-nojs img-responsive" 
@@ -264,7 +264,7 @@
 			<div class="wrapper">
 			
 			
-				<div id="wxo-animator" data-image-current="6" data-image-count="7" data-image-lightning-id="NAT" data-wxo-anim-0="../data/radar/detailed/temp_image/XFT_PRECIP_RAIN_2017_08_22_10_00.GIF" data-wxo-label-0="#1" data-wxo-anim-1="../data/radar/detailed/temp_image/XFT_PRECIP_RAIN_2017_08_22_10_00.GIF" data-wxo-label-1="#2" data-wxo-anim-2="../data/radar/detailed/temp_image/XFT_PRECIP_RAIN_2017_08_22_10_10.GIF" data-wxo-label-2="#3" data-wxo-anim-3="../data/radar/detailed/temp_image/XFT_PRECIP_RAIN_2017_08_22_10_20.GIF" data-wxo-label-3="#4" data-wxo-anim-4="../data/radar/detailed/temp_image/XFT_PRECIP_RAIN_2017_08_22_10_30.GIF" data-wxo-label-4="#5" data-wxo-anim-5="../data/radar/detailed/temp_image/XFT_PRECIP_RAIN_2017_08_22_10_40.GIF" data-wxo-label-5="#6" data-wxo-anim-6="../data/radar/detailed/temp_image/XFT_PRECIP_RAIN_2017_08_22_10_50.GIF" data-wxo-label-6="#7"  >
+				<div id="wxo-animator" data-image-current="6" data-image-count="7" data-image-lightning-id="NAT" data-wxo-anim-0="../data/radar/detailed/temp_image/XFT_PRECIP_RAIN_2017_08_22_10_00.GIF" data-wxo-label-0="#1" data-wxo-anim-1="../data/radar/detailed/temp_image/XFT_PRECIP_RAIN_2017_08_22_10_00.GIF" data-wxo-label-1="#2" data-wxo-anim-2="../data/radar/detailed/temp_image/XFT_PRECIP_RAIN_2017_08_22_10_10.GIF" data-wxo-label-2="#3" data-wxo-anim-3="../data/radar/detailed/temp_image/XFT_PRECIP_RAIN_2017_08_22_10_20.GIF" data-wxo-label-3="#4" data-wxo-anim-4="../data/radar/detailed/temp_image/XFT_PRECIP_RAIN_2017_08_22_10_30.GIF" data-wxo-label-4="#5" data-wxo-anim-5="../data/radar/detailed/temp_image/XFT_PRECIP_RAIN_2017_08_22_10_40.GIF" data-wxo-label-5="#6" data-wxo-anim-6="../data/radar/detailed/temp_image/XFT_PRECIP_RAIN_2017_08_22_11_00.GIF" data-wxo-label-6="#7" data-wxo-anim-7="../data/radar/detailed/temp_image/XFT_PRECIP_RAIN_2017_08_22_11_20.GIF" >
 
 					<div id="wxo-carousel" class="wxo-ie8-hide">
 					
