--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">Alerts</a></li>
 <li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">Public weather alerts for Canada</a></li>
   
-<li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">Canadian weather radar</a></li>  
+<li><a href="https://gc-proto.github.io/radar/index_thunder_e.html">Canadian weather radar</a></li>  
  
 <li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">Ottawa - Thunderstorm</a></li>
 <li><a href="https://gc-proto.github.io/weather/radar/xft-index_thunder_e.html">Franktown radar - Thunderstorm</a></li>
