Hacky fix to formatting issue

--- a/index_e.html
+++ b/index_e.html
@@ -32,7 +32,15 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <!-- End Google Tag Manager -->
 <link rel="stylesheet" href="./cacheable/css/city/jquery-ui-1.10.3.custom.min.css" />
 <link rel="stylesheet" href="./template/wxo/css/wxo.css" />
-
+<style>
+h3 {font-size: 16px;}
+h2, .h1 {
+    border-bottom: 1px solid #af3c43;
+    font-size: 27px;
+    margin-bottom: .2em;
+    padding-bottom: .2em;
+}
+</style>
 </head>
 <body vocab="http://schema.org/" typeof="WebPage">
 <!-- Google Tag Manager DO NOT REMOVE OR MODIFY - NE PAS SUPPRIMER OU MODIFIER -->
