--- a/city/pages/on-118_metric_e.html
+++ b/city/pages/on-118_metric_e.html
@@ -1,5 +1,5 @@
 ---
-redirect_from: "/weather/city/jump_e.html?city=Ottawa+%28Kanata+-+Orl%C3%A9ans%29%2C+ON&lang=e&unit="
+redirect_from: "/city/jump_e.html?city=Ottawa+%28Kanata+-+Orl%C3%A9ans%29%2C+ON&lang=e&unit="
 ---
 <!DOCTYPE html><!--[if lt IE 9]><html class="no-js lt-ie9" lang="en" dir="ltr"><![endif]--><!--[if gt IE 8]><!-->
 <html class="no-js" lang="en" dir="ltr">
