--- a/city/jump_e.html
+++ b/city/jump_e.html
@@ -160,7 +160,7 @@
 <div class="clearfix"></div>
 		<main role="main" property="mainContentOfPage" class="container">
    <h1 property="name" id="wb-cont">Change city result</h1>
-		Please enter at least two characters (Up to 50)				<!?php include $_SERVER['DOCUMENT_ROOT'] . '/city/include/jump_form.php' ?>
+		Please enter at least two characters (Up to 50)				<!?php include $_SERVER['DOCUMENT_ROOT'] . '/weather/city/include/jump_form.php' ?>
 <form class="mrgn-rght-sm" action="/weather/city/jump_e.html" method="GET" role="search" data-h5-instanceid="1" novalidate="novalidate">
 <label accesskey="g">Please try again</label>
 <span class="ui-helper-hidden-accessible" role="status" aria-live="polite"></span>
