--- a/radar/index_thunder_e.html
+++ b/radar/index_thunder_e.html
@@ -579,7 +579,7 @@
 				<li class="rad-loc"><a href="index_e.html?id=WBI">Britt (Near Sudbury)</a></li>
 				<li class="rad-loc"><a href="index_e.html?id=XDR">Dryden</a></li>
 				<li class="rad-loc"><a href="index_e.html?id=WSO">Exeter (near London)</a></li>
-				<li class="rad-loc"><a href="index_e.html?id=XFT">Franktown (near Ottawa)</a></li>
+				<li class="rad-loc"><a href="https://gc-proto.github.io/weather/radar/xft-index_thunder_e.html">Franktown (near Ottawa)</a></li>
 				<li class="rad-loc"><a href="index_e.html?id=WKR">King City (near Toronto)</a></li>
 				<li class="rad-loc"><a href="index_e.html?id=WGJ">Montreal River (near Sault Ste Marie)</a></li>
 				<li class="rad-loc"><a href="index_e.html?id=XTI">Northeast Ontario (near Timmins)</a></li>
