--- a/canada_e.html
+++ b/canada_e.html
@@ -109,7 +109,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 		<div class="container">
 	<div class="row">
 		<ol class="breadcrumb">
-<li><a href="/weather/canada_en.html">Home</a></li><li><a href="/weather/services/environment.html">Environment and natural resources</a></li>
+<li><a href="/weather/canada_en.html">Home</a></li><li><a href="/weather/services/environment.html">Environment and natural resources</a></li><li><a href="/weather/index_e.html">Weather information</a></li><li><a href="/weather/mainmenu/weather_menu_e.html">Weather</a></li>
 		</ol>
 	</div>
 </div>
