--- a/radar/index_thunder_e.html
+++ b/radar/index_thunder_e.html
@@ -660,7 +660,7 @@
 				<li><a href="index_e.html?id=WBI">Britt<br/>(near Sudbury)</a></li>
 				<li><a href="index_e.html?id=XDR">Dryden</a></li>
 				<li><a href="index_e.html?id=WSO">Exeter<br/>(near London)</a></li>
-				<li><a href="index_e.html?id=XFT">Franktown<br/>(near Ottawa)</a></li>
+				<li><a href="https://gc-proto.github.io/weather/radar/xft-index_thunder_e.html">Franktown<br/>(near Ottawa)</a></li>
 				<li><a href="index_e.html?id=WKR">King City<br/>(near Toronto)</a></li>
 				<li><a href="index_e.html?id=WGJ">Montreal River<br/>(near Sault Ste Marie)</a></li>
 				<li><a href="index_e.html?id=XTI">Northeast Ontario<br/>(near Timmins)</a></li>
