--- a/radar/index_thunder_e.html
+++ b/radar/index_thunder_e.html
@@ -62,7 +62,7 @@
   <area href="/radar/index_e.html?id=XDR" alt="Dryden - Radar image for station XDR located near Dryden, Ontario" title="Dryden - Radar image for station XDR located near Dryden, Ontario" shape="circle" coords="294,372,7" />
   <area href="/radar/index_e.html?id=WSO" alt="Exeter - Radar image for station WSO located near London, Ontario." title="Exeter - Radar image for station WSO located near London, Ontario." shape="circle" coords="407,416,8" />
   <area href="/radar/index_e.html?id=XFW" alt="Foxwarren - Radar image for station XFW located near Brandon, Manitoba." title="Foxwarren - Radar image for station XFW located near Brandon, Manitoba." shape="circle" coords="231,373,8" />
-  <area href="/radar/index_e.html?id=XFT" alt="Franktown - Radar image for station XFT located near Ottawa, Ontario." title="Franktown - Radar image for station XFT located near Ottawa, Ontario." shape="circle" coords="440,379,6" />
+  <area href="https://gc-proto.github.io/weather/radar/xft-index_thunder_e.html" alt="Franktown - Radar image for station XFT located near Ottawa, Ontario." title="Franktown - Radar image for station XFT located near Ottawa, Ontario." shape="circle" coords="440,379,6" />
   <area href="/radar/index_e.html?id=XGO" alt="Halifax - Radar image for station XGO located near Halifax, Nova Scotia." title="Halifax - Radar image for station XGO located near Halifax, Nova Scotia." shape="circle" coords="526,316,6" />
   <area href="/radar/index_e.html?id=WTP" alt="Holyrood - Radar image for station WTP located near St. John's, Newfoundland and Labrador." title="Holyrood - Radar image for station WTP located near St. John's, Newfoundland and Labrador." shape="circle" coords="567,234,6" />
   <area href="/radar/index_e.html?id=WHN" alt="Jimmy Lake - Radar image for station WHN located near Cold Lake, Alberta." title="Jimmy Lake - Radar image for station WHN located near Cold Lake, Alberta." shape="circle" coords="170,321,8" />
@@ -99,7 +99,7 @@
   <area href="/radar/index_e.html?id=XDR" alt="Dryden - Radar image for station XDR located near Dryden, Ontario" title="Dryden - Radar image for station XDR located near Dryden, Ontario" shape="circle" coords="206,260,7" />
   <area href="/radar/index_e.html?id=WSO" alt="Exeter - Radar image for station WSO located near London, Ontario." title="Exeter - Radar image for station WSO located near London, Ontario." shape="circle" coords="285,291,8" />
   <area href="/radar/index_e.html?id=XFW" alt="Foxwarren - Radar image for station XFW located near Brandon, Manitoba." title="Foxwarren - Radar image for station XFW located near Brandon, Manitoba." shape="circle" coords="162,261,8" />
-  <area href="/radar/index_e.html?id=XFT" alt="Franktown - Radar image for station XFT located near Ottawa, Ontario." title="Franktown - Radar image for station XFT located near Ottawa, Ontario." shape="circle" coords="308,265,6" />
+  <area href="https://gc-proto.github.io/weather/radar/xft-index_thunder_e.html" alt="Franktown - Radar image for station XFT located near Ottawa, Ontario." title="Franktown - Radar image for station XFT located near Ottawa, Ontario." shape="circle" coords="308,265,6" />
   <area href="/radar/index_e.html?id=XGO" alt="Halifax - Radar image for station XGO located near Halifax, Nova Scotia." title="Halifax - Radar image for station XGO located near Halifax, Nova Scotia." shape="circle" coords="368,221,6" />
   <area href="/radar/index_e.html?id=WTP" alt="Holyrood - Radar image for station WTP located near St. John's, Newfoundland and Labrador." title="Holyrood - Radar image for station WTP located near St. John's, Newfoundland and Labrador." shape="circle" coords="397,164,6" />
   <area href="/radar/index_e.html?id=WHN" alt="Jimmy Lake - Radar image for station WHN located near Cold Lake, Alberta." title="Jimmy Lake - Radar image for station WHN located near Cold Lake, Alberta." shape="circle" coords="119,225,8" />
@@ -579,7 +579,7 @@
 				<li class="rad-loc"><a href="index_e.html?id=WBI">Britt (Near Sudbury)</a></li>
 				<li class="rad-loc"><a href="index_e.html?id=XDR">Dryden</a></li>
 				<li class="rad-loc"><a href="index_e.html?id=WSO">Exeter (near London)</a></li>
-				<li class="rad-loc"><a href="https://gc-proto.github.io/weather/radar/xft-index_thunder_e.html">Franktown (near Ottawa)</a></li>
+				<li><a href="https://gc-proto.github.io/weather/radar/xft-index_thunder_e.html">Franktown (near Ottawa)</a></li>
 				<li class="rad-loc"><a href="index_e.html?id=WKR">King City (near Toronto)</a></li>
 				<li class="rad-loc"><a href="index_e.html?id=WGJ">Montreal River (near Sault Ste Marie)</a></li>
 				<li class="rad-loc"><a href="index_e.html?id=XTI">Northeast Ontario (near Timmins)</a></li>
