--- a/radar/xft-index_thunder_e.html
+++ b/radar/xft-index_thunder_e.html
@@ -288,7 +288,7 @@
 		<ul class="lst-spcd">
 		<li><a href="/canada_e.html">Canadian Weather</a></li>
 		<li><a href="/warnings/index_e.html">Public Alerts - Canada</a></li>
-		<li><a href="/radar/index_e.html">Radar - Canada</a></li>
+		<li><a href="https://gc-proto.github.io/weather/radar/index_thunder_e.html">Radar - Canada</a></li>
 		<li><a href="/satellite/index_e.html">Satellite - Canada</a></li>
 		<li><a href="/saisons/index_e.html">Seasonal forecasts</a></li>
 		<li><a href="/mainmenu/airquality_menu_e.html">Air Quality </a></li>
