--- a/radar/xft-index_thunder_e.html
+++ b/radar/xft-index_thunder_e.html
@@ -708,7 +708,7 @@
 <div class="clearfix"></div>
 <div id="links" class="hidden-xs hidden-print">        
 	<div class="city-header" id="top-header">
-		<a href="index_e.html">Radar - Canada</a>
+		<a href="https://gc-proto.github.io/weather/radar/index_thunder_e.html">Radar - Canada</a>
 	</div>
 	<div class="city-container" id="container5">
 	<div class="city-container" id="container4">
