--- a/lightning/ONT-index_e.html
+++ b/lightning/ONT-index_e.html
@@ -144,7 +144,7 @@
 		<ol class="breadcrumb">
 <li><a href="http://www.canada.ca/en/index.html">Home</a></li><li><a href="http://www.canada.ca/en/services/environment/index.html">Environment and natural resources</a></li>
 <li><a href="/index_e.html">Weather information</a></li>
-<li><a href="/mainmenu/alert_menu_e.html">Alerts</a></li>
+<li><a href="https://gc-proto.github.io/weather/warnings/ottawa-report_e.html">Alerts</a></li>
 		</ol>
 	</div>
 </div>
