--- a/index.html
+++ b/index.html
@@ -125,16 +125,16 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 
 <h3>Severe thunderstorm scenario</h3>
 <ul>
-<li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">Canada.ca home</a></li>
-<li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">Environment theme</a></li>
+<li><a href="https://gc-proto.github.io/weather/en.html">Canada.ca home</a></li>
+<li><a href="https://gc-proto.github.io/weather/services/environment.html">Environment theme</a></li>
 <li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">Weather topic</a></li>
 <li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">Get your weather</a></li>
 <li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">Weather radar and satellite</a></li>
 <li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">Severe weather</a></li>
 
 
-<li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">Weather home</a></li>
-<li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">Canadian weather</a></li> <!--(province?)-->
+<li><a href="https://gc-proto.github.io/weather/index_e.html">Weather home</a></li>
+<li><a href="https://gc-proto.github.io/weather/canada_e.html">Canadian weather</a></li> <!--(province?)-->
 <li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">Jet stream</a></li>
 <li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">Alerts</a></li>
 <li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">Public weather alerts for Canada</a></li>
