Fixed links to small icons

--- a/forecast/hourly/on-118_metric_e.html
+++ b/forecast/hourly/on-118_metric_e.html
@@ -173,7 +173,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
       <tr>
         <td headers="header1" class="text-center">15:00</td>
         <td headers="header2" class="text-center">20</td>
-        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="/weathericons/small/06.png" alt="Chance of showers" /></span><div class="media-body">
+        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/06.png" alt="Chance of showers" /></span><div class="media-body">
             <p>Chance of showers</p>
           </div>
         </td>
@@ -185,7 +185,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
       <tr>
         <td headers="header1" class="text-center">16:00</td>
         <td headers="header2" class="text-center">21</td>
-        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="/weathericons/small/06.png" alt="Chance of showers" /></span><div class="media-body">
+        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/06.png" alt="Chance of showers" /></span><div class="media-body">
             <p>Chance of showers</p>
           </div>
         </td>
@@ -197,7 +197,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
       <tr>
         <td headers="header1" class="text-center">17:00</td>
         <td headers="header2" class="text-center">21</td>
-        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="/weathericons/small/06.png" alt="Chance of showers" /></span><div class="media-body">
+        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/06.png" alt="Chance of showers" /></span><div class="media-body">
             <p>Chance of showers</p>
           </div>
         </td>
@@ -209,7 +209,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
       <tr>
         <td headers="header1" class="text-center">18:00</td>
         <td headers="header2" class="text-center">20</td>
-        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="/weathericons/small/06.png" alt="Chance of showers" /></span><div class="media-body">
+        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/06.png" alt="Chance of showers" /></span><div class="media-body">
             <p>Chance of showers</p>
           </div>
         </td>
@@ -221,7 +221,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
       <tr>
         <td headers="header1" class="text-center">19:00</td>
         <td headers="header2" class="text-center">18</td>
-        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="/weathericons/small/06.png" alt="Chance of showers" /></span><div class="media-body">
+        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/06.png" alt="Chance of showers" /></span><div class="media-body">
             <p>Chance of showers</p>
           </div>
         </td>
@@ -233,7 +233,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
       <tr>
         <td headers="header1" class="text-center">20:00</td>
         <td headers="header2" class="text-center">17</td>
-        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="/weathericons/small/36.png" alt="Chance of showers" /></span><div class="media-body">
+        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/36.png" alt="Chance of showers" /></span><div class="media-body">
             <p>Chance of showers</p>
           </div>
         </td>
@@ -245,7 +245,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
       <tr>
         <td headers="header1" class="text-center">21:00</td>
         <td headers="header2" class="text-center">16</td>
-        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="/weathericons/small/36.png" alt="Chance of showers" /></span><div class="media-body">
+        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/36.png" alt="Chance of showers" /></span><div class="media-body">
             <p>Chance of showers</p>
           </div>
         </td>
@@ -257,7 +257,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
       <tr>
         <td headers="header1" class="text-center">22:00</td>
         <td headers="header2" class="text-center">15</td>
-        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="/weathericons/small/36.png" alt="Chance of showers" /></span><div class="media-body">
+        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/36.png" alt="Chance of showers" /></span><div class="media-body">
             <p>Chance of showers</p>
           </div>
         </td>
@@ -269,7 +269,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
       <tr>
         <td headers="header1" class="text-center">23:00</td>
         <td headers="header2" class="text-center">14</td>
-        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="/weathericons/small/36.png" alt="Chance of showers" /></span><div class="media-body">
+        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/36.png" alt="Chance of showers" /></span><div class="media-body">
             <p>Chance of showers</p>
           </div>
         </td>
@@ -284,7 +284,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
       <tr>
         <td headers="header1" class="text-center">00:00</td>
         <td headers="header2" class="text-center">13</td>
-        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="/weathericons/small/32.png" alt="Partly cloudy" /></span><div class="media-body">
+        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/32.png" alt="Partly cloudy" /></span><div class="media-body">
             <p>Partly cloudy</p>
           </div>
         </td>
@@ -296,7 +296,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
       <tr>
         <td headers="header1" class="text-center">01:00</td>
         <td headers="header2" class="text-center">13</td>
-        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="/weathericons/small/32.png" alt="Partly cloudy" /></span><div class="media-body">
+        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/32.png" alt="Partly cloudy" /></span><div class="media-body">
             <p>Partly cloudy</p>
           </div>
         </td>
@@ -308,7 +308,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
       <tr>
         <td headers="header1" class="text-center">02:00</td>
         <td headers="header2" class="text-center">12</td>
-        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="/weathericons/small/32.png" alt="Partly cloudy" /></span><div class="media-body">
+        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/32.png" alt="Partly cloudy" /></span><div class="media-body">
             <p>Partly cloudy</p>
           </div>
         </td>
@@ -320,7 +320,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
       <tr>
         <td headers="header1" class="text-center">03:00</td>
         <td headers="header2" class="text-center">11</td>
-        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="/weathericons/small/32.png" alt="Partly cloudy" /></span><div class="media-body">
+        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/32.png" alt="Partly cloudy" /></span><div class="media-body">
             <p>Partly cloudy</p>
           </div>
         </td>
@@ -332,7 +332,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
       <tr>
         <td headers="header1" class="text-center">04:00</td>
         <td headers="header2" class="text-center">11</td>
-        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="/weathericons/small/32.png" alt="Partly cloudy" /></span><div class="media-body">
+        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/32.png" alt="Partly cloudy" /></span><div class="media-body">
             <p>Partly cloudy</p>
           </div>
         </td>
@@ -344,7 +344,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
       <tr>
         <td headers="header1" class="text-center">05:00</td>
         <td headers="header2" class="text-center">10</td>
-        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="/weathericons/small/32.png" alt="Partly cloudy" /></span><div class="media-body">
+        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/32.png" alt="Partly cloudy" /></span><div class="media-body">
             <p>Partly cloudy</p>
           </div>
         </td>
@@ -356,7 +356,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
       <tr>
         <td headers="header1" class="text-center">06:00</td>
         <td headers="header2" class="text-center">12</td>
-        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="/weathericons/small/02.png" alt="A mix of sun and cloud" /></span><div class="media-body">
+        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/02.png" alt="A mix of sun and cloud" /></span><div class="media-body">
             <p>A mix of sun and cloud</p>
           </div>
         </td>
@@ -368,7 +368,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
       <tr>
         <td headers="header1" class="text-center">07:00</td>
         <td headers="header2" class="text-center">13</td>
-        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="/weathericons/small/02.png" alt="A mix of sun and cloud" /></span><div class="media-body">
+        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/02.png" alt="A mix of sun and cloud" /></span><div class="media-body">
             <p>A mix of sun and cloud</p>
           </div>
         </td>
@@ -380,7 +380,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
       <tr>
         <td headers="header1" class="text-center">08:00</td>
         <td headers="header2" class="text-center">15</td>
-        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="/weathericons/small/02.png" alt="A mix of sun and cloud" /></span><div class="media-body">
+        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/02.png" alt="A mix of sun and cloud" /></span><div class="media-body">
             <p>A mix of sun and cloud</p>
           </div>
         </td>
@@ -392,7 +392,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
       <tr>
         <td headers="header1" class="text-center">09:00</td>
         <td headers="header2" class="text-center">16</td>
-        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="/weathericons/small/02.png" alt="A mix of sun and cloud" /></span><div class="media-body">
+        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/02.png" alt="A mix of sun and cloud" /></span><div class="media-body">
             <p>A mix of sun and cloud</p>
           </div>
         </td>
@@ -404,7 +404,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
       <tr>
         <td headers="header1" class="text-center">10:00</td>
         <td headers="header2" class="text-center">16</td>
-        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="/weathericons/small/02.png" alt="A mix of sun and cloud" /></span><div class="media-body">
+        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/02.png" alt="A mix of sun and cloud" /></span><div class="media-body">
             <p>A mix of sun and cloud</p>
           </div>
         </td>
@@ -416,7 +416,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
       <tr>
         <td headers="header1" class="text-center">11:00</td>
         <td headers="header2" class="text-center">17</td>
-        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="/weathericons/small/02.png" alt="A mix of sun and cloud" /></span><div class="media-body">
+        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/02.png" alt="A mix of sun and cloud" /></span><div class="media-body">
             <p>A mix of sun and cloud</p>
           </div>
         </td>
@@ -428,7 +428,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
       <tr>
         <td headers="header1" class="text-center">12:00</td>
         <td headers="header2" class="text-center">18</td>
-        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="/weathericons/small/02.png" alt="A mix of sun and cloud" /></span><div class="media-body">
+        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/02.png" alt="A mix of sun and cloud" /></span><div class="media-body">
             <p>A mix of sun and cloud</p>
           </div>
         </td>
@@ -440,7 +440,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
       <tr>
         <td headers="header1" class="text-center">13:00</td>
         <td headers="header2" class="text-center">18</td>
-        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="/weathericons/small/02.png" alt="A mix of sun and cloud" /></span><div class="media-body">
+        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/02.png" alt="A mix of sun and cloud" /></span><div class="media-body">
             <p>A mix of sun and cloud</p>
           </div>
         </td>
@@ -452,7 +452,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
       <tr>
         <td headers="header1" class="text-center">14:00</td>
         <td headers="header2" class="text-center">19</td>
-        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="/weathericons/small/02.png" alt="A mix of sun and cloud" /></span><div class="media-body">
+        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/02.png" alt="A mix of sun and cloud" /></span><div class="media-body">
             <p>A mix of sun and cloud</p>
           </div>
         </td>
