--- a/services/environment/weather/yourweather.html
+++ b/services/environment/weather/yourweather.html
@@ -125,7 +125,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
   <h2>Services and information</h2> 
   <div class="row"> 
    <section class="col-lg-6 col-md-6"> 
-    <h3 class="h5"><a href="http://weather.gc.ca/canada_e.html">Current conditions</a></h3> 
+    <h3 class="h5"><a href="https://gc-proto.github.io/weather/canada_e.html">Current conditions</a></h3> 
     <p>Know your weather. Plan your day.</p> 
    </section> 
    <section class="col-lg-6 col-md-6"> 
