--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <ul>
 <li><a href="https://gc-proto.github.io/weather/en.html">Canada.ca home</a></li>
 <li><a href="https://gc-proto.github.io/weather/services/environment.html">Environment theme</a></li>
-<li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">Weather topic</a></li>
-<li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">Get your weather</a></li>
+<li><a href="https://gc-proto.github.io/weather/services/environment/weather.html">Weather topic</a></li>
+<li><a href="https://gc-proto.github.io/weather/services/environment/weather/yourweather.html">Get your weather</a></li>
 <li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">Weather radar and satellite</a></li>
 <li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">Severe weather</a></li>
 
