--- a/forecast/hourly/on-118_metric_e.html
+++ b/forecast/hourly/on-118_metric_e.html
@@ -110,6 +110,11 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 	<div class="row">
 		<ol class="breadcrumb">
 <li><a href="/weather/canada_en.html">Home</a></li><li><a href="/weather/services/environment.html">Environment and natural resources</a></li>
+<li><a href="/weather/index_e.html">Weather information</a></li>
+<li><a href="/weather/mainmenu/weather_menu_e.html">Weather</a></li>
+<li><a href="/weather/canada_e.html">Local Forecasts</a></li>
+<li><a href="/weather/forecast/canada/ON_index_e.html">Ontario</a></li>
+<li><a href="weather/city/pages/on-118_metric_e.html">Ottawa (Kanata - Orléans)</a></li>
 		</ol>
 	</div>
 </div>
