--- a/canada_e.html
+++ b/canada_e.html
@@ -203,7 +203,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 	<ul class="lst-spcd">
 		<li><a href="/weather/canada_e.html">Canadian Weather</a></li>
 		<li><a href="/weather/warnings/index_e.html">Public Alerts - Canada</a></li>
-		<li><a href="/weather/radar/index_e.html">Radar - Canada</a></li>
+		<li><a href="https://gc-proto.github.io/weather/radar/index_thunder_e.html">Radar - Canada</a></li>
 		<li><a href="/weather/satellite/index_e.html">Satellite - Canada</a></li>
 		<li><a href="/weather/saisons/index_e.html">Seasonal forecasts</a></li>
 		<li><a href="/weather/mainmenu/airquality_menu_e.html">Air Quality </a></li>
