--- a/forecast/hourly/on-118_metric_e.html
+++ b/forecast/hourly/on-118_metric_e.html
@@ -141,11 +141,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <div class="clearfix"></div>
 <main role="main" property="mainContentOfPage" class="container">
 <h1 id="wb-cont">24 Hour Forecast - Ottawa (Kanata - Orléans)</h1>
-<div id="noalert" class="hidden-print">
-  <h2>
-    <a href="/warnings/index_e.html">No Alerts in effect</a>
-  </h2>
-</div>
+<div id="watch"><h2><a href="/weather/warnings/ottawa-report_e.html">SEVERE THUNDERSTORM WATCH IN EFFECT</a></h2></div>
 <div class="table-responsive">
   <table class="table table-striped table-hover table-condensed wxo-media">
     <colgroup>
