--- a/city/pages/on-118_metric_e.html
+++ b/city/pages/on-118_metric_e.html
@@ -118,7 +118,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 		<ol class="breadcrumb">
 		<li><a href="http://www.canada.ca/en/index.html">Home</a></li><li><a href="http://www.canada.ca/en/services/environment/index.html">Environment and natural resources</a></li><li><a href="/index_e.html">Weather information</a></li>
 <li><a href="/mainmenu/weather_menu_e.html">Weather</a></li>
-<li><a href="/canada_e.html">Local forecasts</a></li>
+<li><a href="https://gc-proto.github.io/weather/canada_e.html">Local forecasts</a></li>
 <li><a href="/forecast/canada/index_e.html?id=on" title="Ontario">Ontario</a></li>
 		</ol>
 	</div>
